[package]
name = "ratel-tauri"
version = "0.1.0"
edition = "2024"
authors = ["Biyard"]
description = "Ratel Tauri Android shell"
publish = false

[lib]
name = "ratel_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = { workspace = true }

[dependencies]
tauri = { version = "2", features = [] }
tauri-common = { workspace = true }
tauri-plugin-opener = "2"

# Native Google Sign In: Android Credential Manager + Google
# AuthorizationClient. Reads OAuth client_id from the web bundle (the
# bundle passes it as a sign_in() argument, extracted at compile time
# from src-tauri/google-services.json by app/ratel/build.rs).
tauri-plugin-google-auth = "0.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Decode the base64 file body the WebView passes to the `s3_put_object`
# command (raw binary can't cross the JS invoke bridge cleanly).
base64 = { workspace = true }

# Native HTTP transport for the WebView. iOS WKWebView blocks the cross-site
# session cookie (ITP), so API calls route through the `api_request` command
# using a persistent reqwest cookie jar in the app process instead of the
# in-WebView fetch. `cookies` enables the jar.
#
# Not inheriting the workspace reqwest: 0.13's default TLS backend is rustls +
# aws-lc-sys, which needs `cmake` to cross-compile for aarch64-apple-ios-sim
# (build panics with "Missing dependency: cmake").
#
# `native-tls-vendored` is the cross-platform-safe choice for the mobile shell:
#   - Apple (iOS/macOS): native-tls uses Security.framework — `vendored` is
#     inert, no OpenSSL is compiled or linked.
#   - Android: native-tls uses OpenSSL; `vendored` builds it from source so the
#     NDK cross-build doesn't need a system OpenSSL (plain `native-tls` pulls
#     openssl-sys with no lib to link → Android build fails).
# Also negotiates HTTP/2 (avoids the simulator's broken QUIC).
reqwest = { version = "0.13", default-features = false, features = [
    "cookies",
    "json",
    "http2",
    "native-tls-vendored",
] }

# iOS only: used to disable the WKWebView scrollView's automatic safe-area
# contentInset (see lib.rs). WKWebView already subtracts the safe area from the
# viewport AND the CSS env(safe-area-inset) padding subtracts it again → double
# inset (body 666 vs 759). objc2 0.6 matches what tauri 2.9 / wry resolve.
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
