[package]
name = "space-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratel-post = { workspace = true }
ratel-auth = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
web = ["common/web", "dioxus/web", "ratel-auth/web", "ratel-post/web"]
desktop = ["dioxus/desktop", "ratel-auth/desktop", "ratel-post/desktop"]
mobile = ["dioxus/mobile", "ratel-auth/mobile", "ratel-post/mobile"]
server = [
    "aws-sdk-dynamodb",
    "base64",
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "ratel-post/server",
    "serde_dynamo",
    "tracing",
]
