[package]
name = "space-shell"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
percent-encoding = { workspace = true }
chrono = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
names = { version = "0.14.0", optional = true }
space-page-dashboard = { workspace = true, optional = true }
space-page-overview = { workspace = true, optional = true }
space-page-actions = { workspace = true, optional = true }
space-page-apps = { workspace = true, optional = true }
space-page-report = { workspace = true, optional = true }

space-common = { workspace = true }

[features]
default = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = [
    "common/web",
    "dioxus/web",
    "space-common/web",
    "space-page-actions/web",
    "space-page-apps/web",
    "space-page-dashboard/web",
    "space-page-overview/web",
    "space-page-report/web",
]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = [
    "dioxus/desktop",
    "space-page-actions/desktop",
    "space-page-apps/desktop",
    "space-page-dashboard/desktop",
    "space-page-overview/desktop",
    "space-page-report/desktop",
]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = [
    "dioxus/mobile",
    "space-page-actions/mobile",
    "space-page-apps/mobile",
    "space-page-dashboard/mobile",
    "space-page-overview/mobile",
    "space-page-report/mobile",
]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "async-trait",
    "aws-sdk-dynamodb",
    "base64",
    "chrono",
    "common/server",
    "dioxus/server",
    "names",
    "reqwest",
    "serde_dynamo",
    "space-common/server",
    "space-page-actions/server",
    "space-page-apps/server",
    "space-page-dashboard/server",
    "space-page-overview/server",
    "space-page-report/server",
    "tokio",
]

layout_test = ["web"]
