[package]
name = "ratel-team-shell"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
icons = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
ratel-team-home = { workspace = true, optional = true }
ratel-team-draft = { workspace = true, optional = true }
ratel-team-group = { workspace = true, optional = true }
ratel-team-member = { workspace = true, optional = true }
ratel-team-dao = { workspace = true, optional = true }
ratel-team-reward = { workspace = true, optional = true }
ratel-team-setting = { workspace = true, optional = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "ratel-post/web",
    "ratel-team-home/web",
    "ratel-team-draft/web",
    "ratel-team-group/web",
    "ratel-team-member/web",
    "ratel-team-dao/web",
    "ratel-team-reward/web",
    "ratel-team-setting/web",
]
desktop = [
    "dioxus/desktop",
    "ratel-auth/desktop",
    "ratel-post/desktop",
    "ratel-team-home/desktop",
    "ratel-team-draft/desktop",
    "ratel-team-group/desktop",
    "ratel-team-member/desktop",
    "ratel-team-dao/desktop",
    "ratel-team-reward/desktop",
    "ratel-team-setting/desktop",
]
mobile = [
    "dioxus/mobile",
    "ratel-auth/mobile",
    "ratel-post/mobile",
    "ratel-team-home/mobile",
    "ratel-team-draft/mobile",
    "ratel-team-group/mobile",
    "ratel-team-member/mobile",
    "ratel-team-dao/mobile",
    "ratel-team-reward/mobile",
    "ratel-team-setting/mobile",
]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "ratel-post/server",
    "schemars",
    "aide",
    "tracing",
    "ratel-team-home/server",
    "ratel-team-draft/server",
    "ratel-team-group/server",
    "ratel-team-member/server",
    "ratel-team-dao/server",
    "ratel-team-reward/server",
    "ratel-team-setting/server",
]
