[package]
name = "ratel-team-shell"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
icons = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-config = { version = "1.5.10", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "ratel-post/web",
    "gloo-timers",
]
desktop = [
    "dioxus/desktop",
    "ratel-auth/desktop",
    "ratel-post/desktop",
]
mobile = [
    "dioxus/mobile",
    "ratel-auth/mobile",
    "ratel-post/mobile",
]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "ratel-post/server",
    "schemars",
    "aide",
    "tracing",
    "aws-sdk-dynamodb",
    "aws-config",
    "aws-sdk-s3",
]
