[package]
name = "ratel-user-shell"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
icons = { workspace = true }
tower-sessions = { version = "0.15.0", optional = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
aws-config = { version = "1.5.10", optional = true }
aws-sdk-s3 = { version = "1.74.0", optional = true }
serde_with = { workspace = true }
percent-encoding = { workspace = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "ratel-post/web",
]
desktop = [
    "dioxus/desktop",
    "ratel-auth/desktop",
    "ratel-post/desktop",
]
mobile = [
    "dioxus/mobile",
    "ratel-auth/mobile",
    "ratel-post/mobile",
]
server = [
    "common/server",
    "dioxus/server",
    "tower-sessions",
    "ratel-auth/server",
    "ratel-post/server",
    "aws-config",
    "aws-sdk-s3",
]
