[package]
name = "space-action-main"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true, optional = true }
space-action-poll = { workspace = true, optional = true }
space-action-discussion = { workspace = true, optional = true }
space-common = { workspace = true, optional = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "space-action-poll/web",
    "space-action-discussion/web",
    "space-common/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "space-action-poll/server",
    "space-action-discussion/server",
    "space-common/server",
]
