[package]
name = "space-action-shell"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true, optional = true }

space-common = { workspace = true }

space-action-main = { workspace = true }
space-action-poll = { workspace = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "space-action-main/web",
    "space-action-poll/web",
    "space-common/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "space-action-main/server",
    "space-action-poll/server",
    "space-common/server",
]
