[package]
name = "space-app-file"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

[features]
default = []
web = ["dioxus/web", "common/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "common/server",
]
