[package]
name = "space-app-general"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
space-common = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
space-action-poll = { workspace = true, optional = true }

[features]
default = []
web = [
    "dioxus/web",
    "common/web",
    "space-common/web",
    "ratel-auth/web",
    "ratel-post/web",
    "space-action-poll/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "common/server",
    "space-common/server",
    "ratel-auth/server",
    "ratel-post/server",
    "space-action-poll/server",
]
