[package]
name = "space-app-incentive-pool"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true, optional = true }
ethers = { version = "=2.0.14", optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[features]
default = []
web = ["dioxus/web", "common/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "common/server",
    "chrono",
    "ethers",
    "aws-sdk-dynamodb",
]
