[package]
name = "space-app-main"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

space-common = { workspace = true }

[features]
default = []
web = ["common/web", "dioxus/web", "space-common/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["common/server", "dioxus/server", "space-common/server"]
