[package]
name = "space-app-rewards"
version = "0.1.0"
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }

[features]
default = []
web = ["common/web", "dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["common/server", "dioxus/server"]
