[package]
name = "space-page-actions"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true, optional = true }
space-action-poll = { workspace = true, optional = true }

[features]
default = []
web = ["common/web", "dioxus/web", "ratel-auth/web", "space-action-poll/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "space-action-poll/server",
]
