[package]
name = "space-page-apps"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
space-app-all-apps = { workspace = true }
space-app-general = { workspace = true }
space-app-incentive-pool = { workspace = true }

[features]
default = []
web = [
    "dioxus/web",
    "common/web",
    "space-app-all-apps/web",
    "space-app-general/web",
    "space-app-incentive-pool/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "common/server",
    "space-app-all-apps/server",
    "space-app-general/server",
    "space-app-incentive-pool/server",
]
