[package]
name = "space-page-apps"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
space-app-all_apps = { workspace = true }
space-app-general = { workspace = true }
space-app-incentive-pool = { workspace = true }
space-common = { workspace = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "space-app-all_apps/web",
    "space-app-general/web",
    "space-app-incentive-pool/web",
    "space-common/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "space-app-all_apps/server",
    "space-app-general/server",
    "space-app-incentive-pool/server",
    "space-common/server",
]
