[package]
name = "space-page-dashboard"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
serde_dynamo = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
ratel-auth = { workspace = true, optional = true }
space-common = { workspace = true, optional = true }
[features]
default = []
web = ["common/web", "dioxus/web", "ratel-auth/web", "space-common/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "aws-sdk-dynamodb",
  "base64",
  "chrono",
  "common/server",
  "dioxus/server",
  "ratel-auth/server",
  "serde_dynamo",
  "space-common/server",
  "tracing",
  "uuid",
]
