[package]
name = "space-page-overview"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
space-common = { workspace = true, optional = true }
space-app-file = { workspace = true, optional = true }

[features]
default = []
web = ["common/web", "dioxus/web", "space-common/web", "space-app-file/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["common/server", "dioxus/server", "space-common/server", "space-app-file/server"]
