[package]
name = "ratel-team-draft"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "ratel-post/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "ratel-post/server",
]
