[package]
name = "ratel-team-group"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
icons = { workspace = true }
ratel-auth = { workspace = true, optional = true }
ratel-post = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
aide = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[features]
default = []
web = [
    "common/web",
    "dioxus/web",
    "ratel-auth/web",
    "ratel-post/web",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "common/server",
    "dioxus/server",
    "ratel-auth/server",
    "ratel-post/server",
    "schemars",
    "aide",
    "tracing",
    "aws-sdk-dynamodb",
]
